--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@nekogd/react-hook-npm-publish-boilerplate",
-  "version": "0.0.0",
-  "description": "Modular utility hooks that we often use grouped in one package. Written in TypeScript, documented, tested and maintained.Disclaimer: at least React 16 is needed (the one with hooks ;) )",
-  "author": "nekogd",
+  "name": "@thebigsasha/react-peerjs-hooks",
+  "version": "0.0.1",
+  "description": "Simple implementation of hooks for using PeerJS in a React App, compatible ssr and pre-compilers like NextJS and Gatsby  ",
+  "author": "thebigsasha",
   "license": "Apache-2.0",
-  "repository": "nekogd/react-hook-npm-publish-boilerplate",
+  "repository": "thebigsasha/react-peerjs-hooks",
   "main": "dist/index.js",
   "engines": {
     "node": ">=8",
@@ -50,7 +50,8 @@
     "rollup-plugin-typescript2": "^0.25.3",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^26.1.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "peerjs": "1.4.7"
   },
   "files": [
     "dist"
@@ -59,8 +60,14 @@
     "react",
     "react hooks",
     "typescript",
-    "npm"
-  ],
+    "npm",
+    "peerjs",
+    "nextjs",
+    "gatsby",
+    "ssr",
+    "server side rendering",
+    "webrtc"
+    ],
   "dependencies": {
     "prop-types": "^15.7.2"
   }
