--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0"
+    "react-dom": ">= 16.8.0",
+    "peerjs": "1.4.7"
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^3.4.1",
@@ -50,8 +51,7 @@
     "rollup-plugin-typescript2": "^0.25.3",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^26.1.3",
-    "typescript": "^3.8.3",
-    "peerjs": "1.4.7"
+    "typescript": "^3.8.3"
   },
   "files": [
     "dist"
