--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "rollup-plugin-typescript2": "^0.25.3",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^26.1.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "peerjs": "1.4.7"
   },
   "files": [
     "dist"
